--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -235,7 +235,7 @@ margin-top: 45px;
     justify-content: center;
     background: linear-gradient(45deg,#ffbc00,#ff0058);
     width: 760px;
-    height: 67.5%;
+    height: 69%;
     margin-left: 43%;
     margin-top: -32%;
 }
@@ -289,17 +289,17 @@ margin-top: 45px;
     width: 280px;
     border-radius:60px;
     background: linear-gradient(45deg,#ffbc00,#ff0058);
-    height: 445px;
+    height: 421px;
 }
 .card-inner{
 		margin: 18px;
 		width: 245px;
 		border-radius: 30px;
 	    background: rgba(0,0,0,0.6);
-		height: 345px;
+		height: 326px;
 	}
 
-
+}
 
 .totalcard .card{
 	box-shadow: inset 0 0 10px rgba(0,0,0,0.4),
@@ -422,8 +422,8 @@ margin-top: 45px;
 	background-attachment: fixed; 
 	position: absolute;
 	width: 100%;
-	height: 270px;
-	top: 180px;
+	height: 250px;
+	top: 200px;
 	content: '';
 	transform-origin: top right;
 	transform: skewY(-10deg);
@@ -439,7 +439,7 @@ margin-top: 45px;
 .cc {
 	height: 400px;
 	width: 400px;
-	height: 520px;
+	height: 500px;
 	border-radius: 10px;
 	justify-content: center;
 	box-shadow: 1px 1px 20px rgba(0,0,0,0.4);
@@ -523,7 +523,7 @@ form textarea {
 }
 .feed {
 	width: 800px;
-	height: 450px;
+	height: 400px;
 	position: relative;
 	border-radius: 10px;
 	justify-content: center;
