--- a/src/main/webapp/profile.css
+++ b/src/main/webapp/profile.css
@@ -11,18 +11,9 @@ body {
 	background-color: white;
 	font-family: 'Open Sans', sans-serif;
 }
-.dark-mode {
-	background-color: black;
-
-	
-  }
-
-
-
 header {
 	height: 90vh;
 }
-
 .black {
 	box-shadow: 0 2px 10px black;
 }
@@ -43,14 +34,10 @@ nav {
 	margin-left: -86%;
     margin-top: 6%;
     position: absolute;
-
 }
 .logo img{
 	width: 166px;
-	/*margin-top: 0%;
-	margin-bottom: 0%;	
-	margin-left: -65%;
-*/}
+}
 .home{
     margin-right: 5%;
     margin-top: 7%;
@@ -76,15 +63,15 @@ nav {
 }
 
 .get-start {
-    margin-left: 45px;
-    padding: 5px 20px;
-    border: 2px solid orangered;
-    border-radius: 20px;
-    text-decoration: none;
-    width: 85%;
-    transition: .5s;
-    background-color: orangered;
-    color: white;
+	margin-left: 45px;
+	padding: 5px 40px;
+	border: 2px solid orangered;
+	border-radius: 20px;
+	text-decoration: none;
+	width: 85%;
+	transition: .5s;
+	background-color: orangered;
+	color: white;
 }
 
 .logout{
@@ -161,7 +148,7 @@ h1 {
   font-family: monospace;
 }
 .info{
-  background: linear-gradient(-57deg,#ffbc00,#ff0058 50%, white 50%);
+  background: linear-gradient(-57deg,#ffbc00,#ff0058 50%, rgb(238, 238, 236) 50%);
   height: 100%;
   margin-top: 0%;
 width: 200%;
@@ -182,11 +169,10 @@ border-radius: 100px 40px;
   margin-left: 5%;
   padding: 4px 20px;
   background: transparent;
+ 
   font-weight: 700;
   font-size: large;
-
 }
-
 .homepage {
  
     padding: 10px 30px;
@@ -200,6 +186,8 @@ border-radius: 100px 40px;
     margin-left: -70%;
 
 }
+/*|||||||||||||||||||||| RESPONSIVE  |||||||||||||||||||||||||||||||||||||*/
+
 @media screen and (max-width: 360px) {
 	
 	.mar {
@@ -224,11 +212,10 @@ border-radius: 100px 40px;
 			margin-right: -48%;
 	
   }
+  .logo{
+	margin-left: -82%;
+  }
   .logo img {
     width: 156px;
-}
-.homepage{
-	margin-left: -127%;
-
 }
 }
