--- a/src/main/webapp/project.css
+++ b/src/main/webapp/project.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
@@ -10,7 +9,7 @@ html {
 	scroll-behavior: smooth;
 }
 body {
-	background: white;
+	background: white
 	font-family: 'Open Sans', sans-serif;
 }
 header {
@@ -133,16 +132,17 @@ margin-top: 45px;
 	font-size: 40px;
 	margin-left: -12%;
 	font-weight: 700;
+	margin-top: -12%;
 }
 .project-image{
 	position: absolute;
-    margin-top: -24%;
-    margin-left: 18%;
+	margin-top: -27%;
+    margin-left: 17%;
     height: 40%;
 }
 .project-image img{
 width: 100%;
-height: 110%;
+height: 100%;
 border-radius: 40px;
 border: 6px solid red;
 
@@ -191,3 +191,99 @@ border: 6px solid red;
 	background: #ff003b;
   transition: all .35s; 
   }
+  
+  /*///////////////////////////////////////////////////////////////////////////////*/
+ @media screen and (max-width: 360px) {
+.fontsi{
+	width: 175%;
+    margin-top: 27px;
+	margin-left: 30%;
+}
+.fontsi2{
+	width: 175%;
+    margin-top: 27px;
+	margin-left: 54%;
+}
+.fontsi2 font{
+	font-size: x-large;
+	font-weight: 700;
+	
+}
+.semester img{
+	width: 40px;
+}
+.home img {
+    width: 66px;
+    margin-left: -143%;
+}
+
+nav {
+	padding-top: 30px;
+	width: 107%;
+}
+.home {
+    margin-right: -2%;
+}
+.get-started{
+	padding: 5px 10px;
+    width: 70%;
+	font-size: small;
+}
+.para{
+	margin-right: -22%;
+	font-size: x-small;
+}
+.profile{
+margin-right: -42%;
+}
+
+.logo img {
+width: 156px;
+margin-left: 15%;
+}
+.logout{
+	margin-right: -66%;
+}
+.get-start{
+	padding: 5px 14px;
+    width: 74%;
+	font-size: small;
+}
+.mar{
+	width: 240%;
+	margin-top: 154px;
+}
+.semester{
+	margin-left: -23%;
+}
+.outer{
+	margin-top: 7%;
+    width: 198%;
+	height: 85%;
+}
+.table{
+	margin-left: -4%;
+    margin-top: 3%;
+}
+#t1
+{
+	margin-left: 30%;
+}
+
+.line p {
+    font-size: 40px;
+    margin-left: -5%;
+    font-weight: 700;
+    margin-top: -46%;
+    white-space: nowrap;
+}
+
+.project-image {
+    /* position: absolute; */
+    margin-top: -91%;
+    margin-left: 3%;
+    height: 40%;
+    /* margin-right: -26px; */
+    /* padding-right: 99px; */
+}
+}
