--- a/src/main/webapp/quizStyle.css
+++ b/src/main/webapp/quizStyle.css
@@ -14,7 +14,7 @@ body {
 	background: url(images/courses/b1.jpg);
 	background-size: auto;
 	font-family: 'Open Sans', sans-serif;
-
+	#background-repeat: no-repeat;
 	
 }
 header {
@@ -70,16 +70,17 @@ nav {
 }
 
 .get-start {
-    margin-left: 50px;
-    padding: 6px 30px;
-    border: 2px solid orangered;
-    border-radius: 20px;
-    text-decoration: none;
-    width: 85%;
-    transition: .5s;
-    background-color: orangered;
-    color: white;
+	margin-left: 45px;
+	padding: 5px 40px;
+	border: 2px solid orangered;
+	border-radius: 20px;
+	text-decoration: none;
+	width: 98%;
+	transition: .5s;
+	background-color: orangered;
+	color: white;
 }
+
 .logout{
 	margin-right: -82%;
     margin-top: -1%;
@@ -217,6 +218,7 @@ margin-top: 45px;
 /*Google Form Container*/
 .right-side {
 	background: #fff;
+	#height: 80%;
 	width: 75%;
 }
 .left-side ul {
