--- a/src/main/webapp/semester.css
+++ b/src/main/webapp/semester.css
@@ -66,7 +66,7 @@ nav {
 .para{
 	margin-top: 7%;
     position: absolute;
-    margin-right: -33%;
+    margin-right: -37%;
 	color: orangered;
 	font-size: large;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -74,7 +74,7 @@ nav {
 }
 
 .profile{
-    margin-right: -56%;
+    margin-right: -58%;
     margin-top: 7%;
     position: absolute;
 }
@@ -175,6 +175,7 @@ margin-top: 2%;
 width: 100%;
 padding: 10px 20px;
 }
+
 #t2
 {border-radius:30px;
 box-shadow:5px 5px 5px orangered;
@@ -195,12 +196,98 @@ margin-bottom:20px;
 	color: black;
 }
 .fontsi{
-margin-top:5px;
-margin-left: 20%;
+margin-top:7px;
+margin-left: 27%;
 font-family:Arial, Helvetica, sans-serif;}
+
 .fontsi2{
-	margin-top:7px;
-margin-left: 28%;
+margin-top:7px;
+margin-left: 20%;
 font-family:Arial, Helvetica, sans-serif;
 }
+
+/*|||||||||||||||||||||||||||||||||||||||||   RESPONSIVE   ||||||||||||||||||||||||||||||||||||||||||||||||||*/
+
+@media screen and (max-width: 360px) {
+.fontsi{
+	width: 175%;
+    margin-top: 27px;
+	margin-left: 30%;
+}
+.fontsi2{
+	width: 175%;
+    margin-top: 27px;
+	margin-left: 54%;
+}
+.fontsi2 font{
+	font-size: x-large;
+	font-weight: 700;
+	
+}
+.semester img{
+	width: 40px;
+}
+.home img {
+    width: 66px;
+    margin-left: -143%;
+}
+
+nav {
+	padding-top: 36px;
+	width: 105%;
+}
+.home {
+    margin-right: -2%;
+}
+.get-started{
+	padding: 5px 10px;
+    width: 70%;
+	font-size: small;
+}
+.para{
+	margin-right: -22%;
+	font-size: x-small;
+}
+.profile{
+margin-right: -42%;
+}
+
+.logo img {
+width: 156px;
+margin-left: 15%;
+}
+.logout{
+	margin-right: -66%;
+}
+.get-start{
+	padding: 5px 14px;
+    width: 74%;
+	font-size: small;
+}
+.mar{
+	width: 240%;
+}
+.semester{
+	margin-left: -23%;
+}
+.outer{
+	margin-top: 7%;
+    width: 198%;
+	height: 85%;
+}
+.table{
+	margin-left: -4%;
+    margin-top: 3%;
+}
+#t1
+{
+	margin-left: 30%;
+}
+
+}
+
+
+ 
+
+
 
