--- a/src/main/webapp/start.css
+++ b/src/main/webapp/start.css
@@ -19,11 +19,11 @@ body{
     position: absolute;
 }
 .heading{
- 	margin-top: 8%;
+    margin-top: 8%;
     color: white;
-    margin-left: -29%;
+    margin-left: -15%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 600%;
+    font-size: 400%;
     font-weight: 500;
     font-style: italic;
 }
@@ -132,3 +132,20 @@ animation: animate 10s linear infinite;
     }
 
     }
+	
+	
+@media screen and (max-width: 360px) {
+	
+	.hello{
+		margin-left: 162%;
+		margin-top: 71%;
+	}
+}
+
+@media screen and (max-width:1030px)  {
+	
+	.hello{
+		margin-left: 170%;
+		margin-top: 71%;
+	}
+}
